# evenor

./: .editorconfig  .eslintrc.json  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENCE  LICENSE.md  README.md  README.org  asset-manifest.json  babel.config.js  babel.config.json  craco.config.js  deploy.sh  eslint.config.js  flake.nix  forge.config.js  index.html  log  package-lock.json  package.json  prettier.config.js  qualia.org  shell.nix  timeline.org  tsconfig.json  vite.config.js  vite.main.config.js  vite.preload.config.js  vite.renderer.config.js  wdio.browser.conf.js  wdio.conf.js  wdio.tauri.conf.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js  webpack.web.config.mjs
backend/: index.js  package.json
decisions/: 0001-decompose-evenor.md  0002-evenor-mode-system-debug.md
docs/: contributing.org  faq.org
frontend/: .env  README.org  craco.config.js  flake.nix  package-lock.json  package.json
plans/: 180-csvs-directory-structure.md  180-test-fixes.md
public/: icon.icns  index.html  manifest.json  robots.txt  sw.js
scripts/: algebra-to-sparql.js  output.sparql
src/: .eslintrc.json  App.jsx  algebra.js  app.jsx  app.module.css  default_mind_record.json  fs.js  gesture.js  index.css  index.html  index.js  index.jsx  log-capture.js  main.jsx  polyfill.js  pure.js  query.js  seed.js  store.js  tauri.js
src-electron/: index.js  main.js  preload.cjs  preload.js
src-server/: index.js  package.json
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bin.rs  csvs.rs  db.rs  error.rs  fs.rs  git.rs  io.rs  lfs.rs  lib.rs  main.rs  mobile.rs  repository.rs  seed.rs  zip.rs
src-tauri/src/api/: csvs.rs  git.rs  io.rs  mod.rs  zip.rs
src-tauri/src/api/csvs/: delete_record.rs  mod.rs  select.rs  select_stream.rs  update_record.rs
src-tauri/src/api/git/: add_remote.rs  clone.rs  commit.rs  create_repo.rs  get_remote.rs  list_remotes.rs  mod.rs  pull.rs  push.rs  remote.rs  repository.rs
src-tauri/src/api/io/: find_dataset.rs  get_app_data_dir.rs  get_store_dir.rs  mod.rs  name_dir.rs
src-tauri/src/api/test/: csvs.rs  git.rs  io.rs  mod.rs
src-tauri/src/api/zip/: add_to_zip.rs  mod.rs  zip.rs
src-tauri/src/csvs/: delete_record.rs  mod.rs  select.rs  select_stream.rs  update_record.rs
src-tauri/src/dataset/: find_dataset.rs  get_app_data_dir.rs  get_store_dir.rs  make_dataset.rs  mod.rs  name_dataset.rs  zip.rs
src-tauri/src/dataset/csvs/: delete_record.rs  mod.rs  select.rs  select_stream.rs  update_record.rs
src-tauri/src/git/: add_remote.rs  clone.rs  commit.rs  create_repo.rs  get_remote.rs  list_remotes.rs  mod.rs  pull.rs  push.rs  repository.rs
src-tauri/src/mind/: find_mind.rs  get_app_data_dir.rs  get_store_dir.rs  make_mind.rs  mod.rs  name_mind.rs  zip.rs
src-tauri/src/mind/csvs/: delete_record.rs  mod.rs  select.rs  select_stream.rs  update_record.rs
src-tauri/src/repository/: credentials_state.rs  head_status.rs  mod.rs  repository_status.rs  settings.rs  working_tree_status.rs
src-tauri/src/repository/repository/: clone.rs  commit.rs  create_branch.rs  create_unborn.rs  default_branch_for_remote.rs  default_remote.rs  fast_forward.rs  find_last_commit.rs  head_branch.rs  head_status.rs  init.rs  mod.rs  open.rs  pull.rs  status.rs  switch.rs  switch_branch.rs  try_default_branch.rs  try_open.rs  upstream_status.rs  working_tree_status.rs
src-tauri/src/test/: csvs.rs  git.rs  io.rs  mod.rs  zip.rs
src-tauri/src/zip/: add_to_zip.rs  mod.rs  zip.rs
test/: serve.js  setup.js
(+1261 files in other folders)
