[package]
name = "evenor"
version = "3.0.1"
description = "tell the story of your own data"
authors = ["fetsorn"]
license = "GPLv3"
repository = "https://gitlab.com/norcivilian-labs/evenor"
edition = "2021"

[lib]
name = "evenor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mindzoo = { version = "0.1.3", git = "https://codeberg.org/norcivilianlabs/mindzoo" }
csvs = { version = "0.3.2", git = "https://codeberg.org/norcivilianlabs/csvs-rs" }
futures-core = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1", features = ["sync"] }
log = "0.4.25"
tauri-plugin-log = "2"
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
temp-dir = { version = "0.1.16", git = "https://codeberg.org/fetsorn/temp-dir" }
chrono = "0.4"

[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "android"))'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
libz-sys = { version = "1.1.2" }
